--- a/work/09mobileweb/01/css/main.css
+++ b/work/09mobileweb/01/css/main.css
@@ -6,6 +6,10 @@
 * @Last Modified time: 2015-12-12 17:51:08
 */
 
+/*
+1. 样式都通过id去限定
+2. 尽可能多使用直接子代选择器
+*/
 /*公共样式*/
 body{
   font-family: "Helvetica Neue", Helvetica, Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
@@ -18,6 +22,21 @@ body{
   background-color: #f0f0f0;
 }
 
+#header > .topbar{
+  height: 40px;
+  border-bottom: 1px solid #c0c0c0;
+}
+#header > .topbar > .row > div{
+  background-color: #f40;
+  height: 40px;
+}
+#header > .topbar > .row > div:nt-of-type(){
+  background-color: #f40;
+  height: 40px;
+}
+
+
+
 
 /*测试样式区域*/
 section{
@@ -25,9 +44,9 @@ section{
   background-color: #fff;
 
 }
-section:nth-child(2n+1){
+section:nth-of-type(2n+1){
   /*选择到第1,3,5.....*/
-  
+  background-color: #f5f5f5 ;
 }
 
 
