--- a/4--swagger/.settings/org.eclipse.wst.common.component
+++ b/4--swagger/.settings/org.eclipse.wst.common.component
@@ -4,8 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <property name="java-output-path" value="/smartad-api/target/classes"/>
-        <property name="context-root" value="/base"/>
+        <property name="context-root" value="4-swagger"/>
     </wb-module>
 </project-modules>
